--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                   <div class="card-banner">
 
                     <a href="#">
-                      <img src="./assets/images/v3.png" alt="Headphone">
+                      <img src="./assets/images/V3.png" alt="Miaybe">
                     </a>
 
                   
